kubernetes/endereco-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  endereco
  namespace: default
  labels:
    app:  endereco
spec:
  selector:
    matchLabels:
      app: endereco
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  endereco
    spec:
      containers:
      - name:  endereco
        image:  ghcr.io/llunno/tasdis-endereco:latest
        ports:
        - containerPort:  8083
          name:  endereco
        resources:
          limits:
            cpu: "2"
            memory: "512Mi"
          requests:
            cpu: "1"
            memory: "256Mi"
      restartPolicy: Always
