kubernetes/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  gateway
  namespace: default
  labels:
    app:  gateway
spec:
  selector:
    matchLabels:
      app: gateway
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  gateway
    spec:
      containers:
      - name:  gateway
        image:  ghcr.io/llunno/tasdis-gateway:latest
        ports:
        - containerPort:  8085
          name:  gateway
        resources:
          limits:
            cpu: "2"
            memory: "512Mi"
          requests:
            cpu: "1"
            memory: "256Mi"
      restartPolicy: Always
