kubernetes/instituicao-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  instituicao
  namespace: default
  labels:
    app:  instituicao
spec:
  selector:
    matchLabels:
      app: instituicao
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  instituicao
    spec:
      containers:
      - name:  instituicao
        image:  ghcr.io/llunno/tasdis-instituicao:latest
        ports:
        - containerPort:  8082
          name:  instituicao
        resources:
          limits:
            cpu: "2"
            memory: "512Mi"
          requests:
            cpu: "1"
            memory: "256Mi"
      restartPolicy: Always
