kubernetes/bff-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bff-service
  namespace: default
spec:
  selector:
    app: bff
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: bff-service
    protocol: TCP
    port: 8086
    targetPort: 8086
