kubernetes/curso-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: curso-service
  namespace: default
spec:
  selector:
    app: curso
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: curso-service
    protocol: TCP
    port: 8084
    targetPort: 8084
