kubernetes/endereco-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: endereco-service
  namespace: default
spec:
  selector:
    app: endereco
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: endereco-service
    protocol: TCP
    port: 8083
    targetPort: 8083
