kubernetes/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: default
spec:
  selector:
    app: gateway
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: gateway-service
    protocol: TCP
    port: 8085
    targetPort: 8085
