kubernetes/tarefa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tarefa-service
  namespace: default
spec:
  selector:
    app: tarefa
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: tarefa-service
    protocol: TCP
    port: 8080
    targetPort: 8080
