kubernetes/usuario-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usuario-service
  namespace: default
spec:
  selector:
    app: usuario
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: usuario-service
    protocol: TCP
    port: 8081
    targetPort: 8081
